--- a/melancolico.html
+++ b/melancolico.html
@@ -93,7 +93,7 @@
         <img src="images/foto5.jpg" alt="Descripción de la foto 5" onclick="openFullscreen(this)">
         <img src="images/foto6.jpg" alt="Descripción de la foto 6" onclick="openFullscreen(this)">
         <img src="images/foto7.jpg" alt="Descripción de la foto 7" onclick="openFullscreen(this)">
-        <img src="images/foto8.PNG" alt="Descripción de la foto 8" onclick="openFullscreen(this)">
+        <img src="images/foto8.png" alt="Descripción de la foto 8" onclick="openFullscreen(this)">
         <img src="images/foto9.jpg" alt="Descripción de la foto 9" onclick="openFullscreen(this)">
         <img src="images/foto10.jpg" alt="Descripción de la foto 10" onclick="openFullscreen(this)">
     </div>
