--- a/opciones/jugar.html
+++ b/opciones/jugar.html
@@ -1,11 +1,154 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Juegos</title>
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: 'Helvetica Neue', sans-serif;
+            margin: 0;
+            height: 100vh; /* Ocupa toda la altura de la ventana */
+            display: flex; /* Usamos flexbox para centrar el contenido */
+            justify-content: center; /* Centrar horizontalmente */
+            align-items: center; /* Centrar verticalmente */
+            background: url('../images/fondo.png') no-repeat center center fixed; /* Cambia la ruta según donde esté la imagen */
+            background-size: cover; /* Asegúrate de que la imagen cubra toda la pantalla */
+        }
+
+        /* Capa de desenfoque */
+        .blur {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6); /* Fondo oscuro con transparencia */
+            z-index: 1; /* Mantener por debajo del contenido */
+        }
+
+        /* Contenedor principal */
+        .container {
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.8); /* Fondo negro difuminado */
+            padding: 40px; /* Espaciado interno */
+            border-radius: 15px; /* Bordes redondeados */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra */
+            z-index: 2; /* Mantener por encima de la capa de desenfoque */
+        }
+
+        /* Estilo del título principal */
+        h1 {
+            color: #fff; /* Color del texto en blanco */
+            font-size: 36px; /* Tamaño del texto */
+            margin-bottom: 20px; /* Margen inferior */
+        }
+
+        /* Estilo de los botones */
+        .buttons button {
+            margin: 10px;
+            padding: 15px 30px;
+            font-size: 18px;
+            border-radius: 50px; /* Bordes redondeados */
+            border: none; /* Sin borde */
+            cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+            background-color: #007bff; /* Color azul */
+            color: white; /* Color del texto */
+            transition: background-color 0.3s; /* Transición para hover */
+        }
+
+        .buttons button:hover {
+            background-color: #0056b3; /* Color de fondo en hover */
+        }
+
+        /* Estilo del mensaje del juego de adivinar el número */
+        #mensaje {
+            margin: 20px;
+            color: white; /* Color del texto */
+            font-size: 20px; /* Tamaño del texto */
+        }
+
+        /* Estilo del input del número */
+        #guess {
+            padding: 10px;
+            font-size: 18px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            width: 200px; /* Ancho del input */
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="blur"></div> <!-- Capa de desenfoque -->
+    <div class="container">
+        <h1>Piedra, Papel o Tijera</h1>
+        <div class="buttons">
+            <button onclick="jugar('piedra')">Piedra</button>
+            <button onclick="jugar('papel')">Papel</button>
+            <button onclick="jugar('tijera')">Tijera</button>
+        </div>
+        <div id="resultado" style="color: #fff; margin: 20px;"></div>
+
+        <h1>Adivina el Número</h1>
+        <p id="mensaje"></p>
+        <input type="number" id="guess" placeholder="Escribe un número entre 1 y 100">
+        <button onclick="adivinar()">Adivinar</button>
+    </div>
+
+    <script>
+        // Juego de Piedra, Papel o Tijera
+        let ultimaOpcionComputadora = '';
+
+        function jugar(opcionUsuario) {
+            const opciones = ['piedra', 'papel', 'tijera'];
+            let opcionComputadora;
+
+            // Selección de la opción de la computadora
+            do {
+                opcionComputadora = opciones[Math.floor(Math.random() * 3)];
+            } while (opcionComputadora === ultimaOpcionComputadora || (opcionUsuario === opcionComputadora));
+
+            let resultado;
+
+            if (opcionUsuario === opcionComputadora) {
+                resultado = "¡Empate!";
+            } else if (
+                (opcionUsuario === 'piedra' && opcionComputadora === 'tijera') ||
+                (opcionUsuario === 'papel' && opcionComputadora === 'piedra') ||
+                (opcionUsuario === 'tijera' && opcionComputadora === 'papel')
+            ) {
+                resultado = "¡Ganaste!";
+            } else {
+                resultado = "¡Perdiste!";
+            }
+
+            ultimaOpcionComputadora = opcionComputadora; // Actualiza la última opción de la computadora
+
+            document.getElementById('resultado').innerText = `Elegiste: ${opcionUsuario}, Computadora eligió: ${opcionComputadora}. ${resultado}`;
+        }
+
+        // Juego de Adivina el Número
+        let numeroAleatorio = generarNumeroAleatorio();
+
+        function generarNumeroAleatorio() {
+            return Math.floor(Math.random() * 100) + 1;
+        }
+
+        function adivinar() {
+            const intento = parseInt(document.getElementById('guess').value);
+            if (intento === numeroAleatorio) {
+                document.getElementById('mensaje').innerText = "¡Correcto! El número era " + numeroAleatorio;
+                numeroAleatorio = generarNumeroAleatorio(); // Genera un nuevo número
+                document.getElementById('guess').value = ''; // Limpiar el input
+            } else if (intento < numeroAleatorio) {
+                document.getElementById('mensaje').innerText = "Demasiado bajo. Intenta de nuevo.";
+                document.getElementById('guess').value = ''; // Limpiar el input
+            } else {
+                document.getElementById('mensaje').innerText = "Demasiado alto. Intenta de nuevo.";
+                document.getElementById('guess').value = ''; // Limpiar el input
+            }
+        }
+    </script>
 </body>
 </html>
