--- a/melancolico.html
+++ b/melancolico.html
@@ -86,16 +86,16 @@
 <body>
 
     <div class="image-container">
-        <img src="images/foto1.jpg" alt="Descripción de la foto 1" onclick="openFullscreen(this)">
-        <img src="images/foto2.jpg" alt="Descripción de la foto 2" onclick="openFullscreen(this)">
-        <img src="images/foto3.jpg" alt="Descripción de la foto 3" onclick="openFullscreen(this)">
-        <img src="images/foto4.jpg" alt="Descripción de la foto 4" onclick="openFullscreen(this)">
-        <img src="images/foto5.jpg" alt="Descripción de la foto 5" onclick="openFullscreen(this)">
-        <img src="images/foto6.jpg" alt="Descripción de la foto 6" onclick="openFullscreen(this)">
-        <img src="images/foto7.jpg" alt="Descripción de la foto 7" onclick="openFullscreen(this)">
-        <img src="images/foto8.png" alt="Descripción de la foto 8" onclick="openFullscreen(this)">
-        <img src="images/foto9.jpg" alt="Descripción de la foto 9" onclick="openFullscreen(this)">
-        <img src="images/foto10.jpg" alt="Descripción de la foto 10" onclick="openFullscreen(this)">
+        <img src="images/foto1.jpg" alt="Me encantó el tenerte por la playa y poder andar juntos mientras mi hermana nos hizo esta foto" onclick="openFullscreen(this)">
+        <img src="images/foto2.jpg" alt="Me encanta sentirte cerca de mi, duele tener lo que mas quieres a tanta distancia casi todo el tiempo" onclick="openFullscreen(this)">
+        <img src="images/foto3.jpg" alt="Al parecer o soy una especie nueva o algo raro pero no me retuvieron alli" onclick="openFullscreen(this)">
+        <img src="images/foto4.jpg" alt="Una y mil veces repetiría el meterme al mar contigo de noche" onclick="openFullscreen(this)">
+        <img src="images/foto5.jpg" alt="Y si repetimos el momento?" onclick="openFullscreen(this)">
+        <img src="images/foto6.jpg" alt="Espero que el año que viene te guste mas" onclick="openFullscreen(this)">
+        <img src="images/foto7.jpg" alt="No es por nada pero estas mas buena tu que esa pasta" onclick="openFullscreen(this)">
+        <img src="images/foto8.png" alt="Y tus padres cerca, me daba vergüenza besarte delante de ellos" onclick="openFullscreen(this)">
+        <img src="images/foto9.jpg" alt="Me encanta esta foto" onclick="openFullscreen(this)">
+        <img src="images/foto10.jpg" alt="Que rabia que no me besases" onclick="openFullscreen(this)">
     </div>
 
     <a href="Mi amor.docx" download>
