--- a/opciones/vernos.html
+++ b/opciones/vernos.html
@@ -73,7 +73,7 @@
 <body>
     <div class="blur"></div> <!-- Capa de desenfoque -->
     <div class="container">
-        <h1>Cuenta Regresiva para París</h1>
+        <h1>Cuenta Regresiva para Vernos</h1>
         <div class="countdown" id="countdown">
             <!-- La cuenta regresiva se mostrará aquí -->
         </div>
