--- a/iniciar.html
+++ b/iniciar.html
@@ -64,6 +64,8 @@
             const password = document.getElementById('password').value;
             const photos = [];
             
+            // Comprobar cuántas fotos se han subido
+            let photoCount = 0;
             for (let i = 1; i <= 5; i++) {
                 const fileInput = document.getElementById('photo' + i);
                 if (fileInput.files.length > 0) {
@@ -71,16 +73,26 @@
                     const reader = new FileReader();
                     reader.onload = function(e) {
                         photos.push(e.target.result);
+                        photoCount++;
                         // Guardamos el nombre de usuario, contraseña y fotos en el almacenamiento local
-                        if (photos.length === 5 || i === 5) {
-                            localStorage.setItem('username', username);
-                            localStorage.setItem('profilePicture', 'default-profile.png'); // Reemplaza con la lógica para manejar la foto de perfil si la tienes.
-                            localStorage.setItem('photos', JSON.stringify(photos));
-                            window.location.href = 'index.html'; // Redirige a index.html después de iniciar sesión
+                        if (photoCount === photos.length) {
+                            if (photos.length >= 1 && photos.length <= 5) {
+                                localStorage.setItem('username', username);
+                                localStorage.setItem('profilePicture', 'default-profile.png'); // Reemplaza con la lógica para manejar la foto de perfil si la tienes.
+                                localStorage.setItem('photos', JSON.stringify(photos));
+                                window.location.href = 'index.html'; // Redirige a index.html después de iniciar sesión
+                            }
                         }
                     };
                     reader.readAsDataURL(file);
                 }
+            }
+
+            // Validar la cantidad de fotos al finalizar la carga
+            if (photos.length < 1) {
+                alert("Debes subir al menos una foto.");
+            } else if (photos.length > 5) {
+                alert("Solo puedes subir un máximo de 5 fotos.");
             }
         });
     </script>
