--- a/opciones/estado_animo.html
+++ b/opciones/estado_animo.html
@@ -36,10 +36,10 @@
 <body>
     <h1>Elige una Opción</h1>
     <div class="button-container">
-        <button onclick="window.location.href='melancolico.html'">Melancólico</button>
+        <button onclick="window.location.href='../melancolico.html'">Melancólico</button>
     </div>
     <div class="button-container">
-        <button onclick="window.location.href='animar.html'">Animar</button>
+        <button onclick="window.location.href='../animar.html'">Animar</button>
     </div>
 </body>
 </html>
