--- a/crear.html
+++ b/crear.html
@@ -22,17 +22,17 @@
             border: 2px solid #800080;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 90%; /* Ajuste de ancho para pantallas más pequeñas */
-            margin-left: auto;
-            margin-right: auto;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         input {
             padding: 10px;
             margin: 10px 0;
-            width: 80%; /* Ancho flexible para móviles */
+            width: 90%; /* Ajuste de ancho flexible */
             border: 1px solid #800080;
             border-radius: 5px;
+            box-sizing: border-box;
         }
 
         button {
@@ -42,7 +42,7 @@
             padding: 10px 20px;
             cursor: pointer;
             border-radius: 5px;
-            width: 80%;
+            width: 90%; /* Ajuste de ancho flexible */
         }
 
         button:hover {
@@ -52,11 +52,10 @@
         @media (max-width: 600px) {
             .container {
                 padding: 15px;
-                width: 100%;
             }
 
             input, button {
-                width: 90%; /* Más espacio en pantallas pequeñas */
+                width: 95%; /* Mayor ancho en pantallas pequeñas */
             }
         }
     </style>
